--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "proyecto-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kleyver14.github.io/proyecto-react/",
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
@@ -37,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
